--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "emitDeclarationOnly": false,
     "sourceMap": false,
     "strict": true,
+    "noEmit": true,
     "noEmitOnError": true,
     "noImplicitAny": true,
     "skipLibCheck": true,
