--- a/package.json
+++ b/package.json
@@ -38,34 +38,35 @@
     "@activeviam/activeui-sdk": "5.0.0-beta-20210225140209-c8b44af",
     "@ant-design/icons": "^4.4.0",
     "@emotion/core": "^10.0.27",
-    "@types/react-router-dom": "^5.1.3",
+    "@rehooks/component-size": "^1.0.3",
     "@types/fs-extra": "^9.0.1",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.0.4",
+    "@types/plotly.js": "^1.54.6",
     "@types/preval.macro": "^3.0.0",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.3",
     "antd": "^4.12.2",
     "bowser": "^2.8.1",
     "immer": "^8.0.0",
     "lodash": "^4.17.15",
+    "plotly.js": "^1.58.3",
     "react": "^17.0.0",
     "react-dnd": "^11.1.1",
     "react-dnd-html5-backend": "^11.1.1",
     "react-dom": "^17.0.0",
     "react-error-boundary": "^3.0.2",
     "react-intl": "^5.8.6",
+    "react-plotly.js": "^2.5.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-use": "^15.3.4",
     "redux": "^4.0.5",
     "redux-undo": "^1.0.1",
     "tree-to-flat-map": "^1.0.1",
-    "use-persisted": "^0.1.2",
-    "@types/plotly.js": "^1.54.6",
-    "plotly.js": "^1.58.3",
-    "react-plotly.js": "^2.5.1"
+    "use-persisted": "^0.1.2"
   },
   "devDependencies": {
     "@testing-library/dom": "^7.10.1",
